--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       - SQL_HOST=mysql
       - SQL_USER=root
       - SQL_PASSWORD=example
-      - SQL_DATABASE=tastbuds
+      - SQL_DATABASE=tastebuds
     volumes:
       - ../imagestorage/:/home/node/app
     ports:
