--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
   },
   "homepage": "https://github.com/AlexandraKarlsson/TasteBudsDelightBack#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mysql2": "^2.2.5"
+    "express-jwt": "^5.3.3",
+    "mysql2": "^2.2.5",
+    "validator": "^13.5.2"
   }
 }
